--- a/20220209_Bonjour_JavaScript/index.html
+++ b/20220209_Bonjour_JavaScript/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>My web page</title>
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -12,3 +13,6 @@
         <script src="js/script.js"></script>
     </body>
 </html>
+
+
+
