feat: ajout des composantes HTML

--- a/20220217_GuessANumber/index.html
+++ b/20220217_GuessANumber/index.html
@@ -9,6 +9,9 @@
     <body>
 
         <h1>Ada Tech School</h1>
+        <h2>Devinez le nombre !</h2>
+        <button onclick="startGame()">Démarrer le jeu</button>
+        <br>
 
         <script src="js/script.js"></script>
     </body>
